--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
@@ -28,7 +29,7 @@
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.OurPartnersActivity"
             android:label="Our Partners"
@@ -44,9 +45,14 @@
         <activity
             android:name=".activity.LegalActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activity.WalkthroughActivity"
+        <activity
+            android:name=".activity.WalkthroughActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:label="@string/walkthrough_label"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activity.FutureEclipsesActivity"
+            android:label="@string/future_eclipse_label"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
