--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,8 +81,7 @@
         <!--
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="" />
-            -->
+            android:value="" /> -->
     </application>
 
 </manifest>
