--- a/build.gradle
+++ b/build.gradle
@@ -37,5 +37,7 @@ ext {
     // App dependencies
     glideVersion = '4.7.1'
     butterKnifeVersion = '10.2.3'
+    kotlinCoroutineVersion = '1.5.2'
+    lifecycleVersion = "2.4.0"
 
 }
