--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-parcelize'
 
 android {
     buildFeatures {
+        dataBinding = true
         viewBinding true
     }
 
