--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,6 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.1.0'
         classpath 'com.google.gms:google-services:4.3.4'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.4.1'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -35,9 +34,17 @@ ext {
     buildToolsVersion = '29.0.2'
 
     // App dependencies
+    appCompatVersion = '1.3.1'
+    constraintLayoutVersion = '2.1.2'
+    materialVersion = '1.2.0'
+    fragmentVersion = '1.3.0'
+    preferenceVersion = '1.1.0'
     glideVersion = '4.7.1'
     butterKnifeVersion = '10.2.3'
     kotlinCoroutineVersion = '1.5.2'
-    lifecycleVersion = "2.4.0"
-
+    lifecycleVersion = '2.4.0'
+    firebaseBomVersion = '26.1.1'
+    jodaTimeVersion = '2.10.8'
+    playServicesVersion = '18.0.0'
+    viewPagerVersion = '1.0.0'
 }
