--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.6.0'
     repositories {
         jcenter()
         google()
@@ -10,8 +11,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.1.0'
         classpath 'com.google.gms:google-services:4.3.4'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.4.1'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -29,11 +29,21 @@ task clean(type: Delete) {
 ext {
     // Sdk and tools
     minSdkVersion = 21
-    targetSdkVersion = 30
-    compileSdkVersion = 30
+    targetSdkVersion = 31
+    compileSdkVersion = 31
     buildToolsVersion = '29.0.2'
 
     // App dependencies
+    appCompatVersion = '1.3.1'
+    constraintLayoutVersion = '2.1.2'
+    materialVersion = '1.2.0'
+    fragmentVersion = '1.3.0'
+    preferenceVersion = '1.1.0'
     glideVersion = '4.7.1'
-    butterKnifeVersion = '10.2.3'
+    kotlinCoroutineVersion = '1.5.2'
+    lifecycleVersion = '2.4.0'
+    firebaseBomVersion = '26.1.1'
+    jodaTimeVersion = '2.10.8'
+    playServicesVersion = '18.0.0'
+    viewPagerVersion = '1.0.0'
 }
