--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
     <application
         android:name=".EclipseSoundscapesApp"
-        android:fullBackupOnly="true"
+        android:allowBackup="true"
         android:icon="@mipmap/soundscape_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/soundscape_logo"
@@ -25,8 +25,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.splash.SplashActivity"
-            android:theme="@style/SplashTheme"
-            android:exported="true">
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
