--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,11 +31,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"/>
+
         <activity
             android:name=".ui.about.OurPartnersActivity"
             android:label="@string/our_partners"
@@ -64,7 +66,7 @@
             android:name=".ui.media.MediaPlayerActivity"
             android:label="@string/media_player"
             android:screenOrientation="portrait"
-            android:theme="@style/TranslucentTheme" />
+            android:theme="@style/MediaPlayerTheme" />
         <activity
             android:name=".ui.rumblemap.RumbleMapInteractionActivity"
             android:label="@string/rumble_map_interaction"
