Adds eclipse type property to configuration

--- a/app/src/main/assets/eclipse_configurations.json
+++ b/app/src/main/assets/eclipse_configurations.json
@@ -1,6 +1,7 @@
 [
   {
     "date": "2023-10-14",
+    "type": "annular",
     "elements": [
       2460232.25046491, 18.0, -3.0, 3.0,
       73.3, 0.16971115, 0.45855319, 2.7803e-05, -5.4280e-06,
@@ -972,6 +973,7 @@
   },
   {
     "date": "2024-04-08",
+    "type": "total",
     "elements": [
       2460409.26283562, 18.0, -3.0, 3.0,
       73.5, -0.31818941, 0.51171158, 3.2613e-05, -8.4156e-06,
