--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         materialVersion = '1.2.0'
         fragmentVersion = '1.3.0'
         preferenceVersion = '1.1.0'
+        splashScreenVersion = '1.0.0-beta01'
         glideVersion = '4.7.1'
         kotlinVersion = '1.6.0'
         ktxVersion = '1.0.2'
