--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Built application files
 *.apk
+*.aar
 *.ap_
+*.aab
 
 # Files for the ART/Dalvik VM
 *.dex
@@ -35,13 +37,12 @@ proguard/
 # Android Studio captures folder
 captures/
 
-# Intellij
+# IntelliJ
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/dictionaries
-.idea/libraries
+.idea/*
+!.idea/copyright
+
+DS_Store
 
 # Keystore files
 *.jks
@@ -56,3 +57,11 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
+# lint
+lint/intermediates/
+lint/generated/
+lint/outputs/
+lint/tmp/
+# lint/reports/
+ktlint
