--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ buildscript {
 
     ext {
         // Sdk and tools
-        minSdkVersion = 21
-        targetSdkVersion = 33
-        compileSdkVersion = 33
+        minSdkVersion = 23
+        targetSdkVersion = 34
+        compileSdkVersion = 34
         buildToolsVersion = '33.0.1'
 
         // App dependencies
@@ -16,10 +16,10 @@ buildscript {
         materialVersion = '1.2.0'
         fragmentVersion = '1.3.0'
         preferenceVersion = '1.1.0'
-        splashScreenVersion = '1.0.0-beta01'
+        splashScreenVersion = '1.0.0'
         glideVersion = '4.7.1'
         kotlinVersion = '1.8.0'
-        ktxVersion = '1.0.2'
+        ktxVersion = '1.12.0'
         coroutinesVersion = '1.5.2'
         lifecycleVersion = '2.4.0'
         firebaseBomVersion = '26.1.1'
@@ -32,6 +32,7 @@ buildscript {
         workVersion = '2.7.0'
         gsonVersion = '2.8.2'
         hiltVersion = '2.38.1'
+        activityVersion = '1.8.0'
     }
 
     repositories {
