--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,11 +64,11 @@ android {
         }
     }
 
-    lintOptions {
-        checkReleaseBuilds false
-    }
 
     namespace = "org.eclipsesoundscapes"
+    lint {
+        checkReleaseBuilds false
+    }
 }
 
 dependencies {
@@ -100,18 +100,29 @@ dependencies {
     implementation "com.google.code.gson:gson:$rootProject.gsonVersion"
 
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
-    kapt "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
     implementation "androidx.core:core-ktx:$rootProject.ktxVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutinesVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutinesVersion"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycleVersion"
+
+    annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
+
     implementation "androidx.work:work-runtime-ktx:$rootProject.workVersion"
+
+    kapt "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
     implementation "com.google.dagger:hilt-android:$rootProject.hiltVersion"
+
+    implementation 'androidx.hilt:hilt-work:1.1.0'
+    kapt 'androidx.hilt:hilt-compiler:1.1.0'
 }
 repositories {
     mavenCentral()
+}
+
+kapt {
+    correctErrorTypes true
 }
