--- a/build.gradle
+++ b/build.gradle
@@ -7,16 +7,15 @@ buildscript {
         minSdkVersion = 23
         targetSdkVersion = 34
         compileSdkVersion = 34
-        buildToolsVersion = '33.0.1'
 
         // App dependencies
         gradleVersion = '8.3.1'
         appCompatVersion = '1.3.1'
-        constraintLayoutVersion = '2.1.2'
+        constraintLayoutVersion = '2.1.4'
         materialVersion = '1.11.0'
         fragmentVersion = '1.6.2'
-        preferenceVersion = '1.1.0'
-        splashScreenVersion = '1.0.0'
+        preferenceVersion = '1.2.1'
+        splashScreenVersion = '1.0.1'
         glideVersion = '4.7.1'
         kotlinVersion = '1.9.0'
         ktxVersion = '1.12.0'
@@ -29,10 +28,13 @@ buildscript {
         roomVersion = '2.6.1'
         googleServices = '4.4.1'
         crashlyticsGradleVersion = '2.5.2'
+        crashlyticsBuildTools = '2.9.9'
         workVersion = '2.9.0'
         gsonVersion = '2.8.2'
         hiltVersion = '2.49'
-        activityVersion = '1.8.0'
+        activityVersion = '1.8.2'
+        legacySupportVersion = '1.0.0'
+        androidHiltVersion = '1.1.0'
     }
 
     repositories {
@@ -56,6 +58,6 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+tasks.register('clean', Delete) {
+    delete rootProject.layout.buildDirectory
 }
